# water-level-monitor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: config.h.in
src/: CMakeLists.txt
src/board/: CMakeLists.txt
src/board/stm32f1xx/: CMakeLists.txt  stm32f1xx_hal_conf.h  syscalls.cpp
test/: CMakeLists.txt  config_test.cpp
